@@ -126,8 +126,8 @@ amp-experiment
 amp-pixel
 amp-sticky-ad
 
-# style 指定子によるXSS対策
-#_style_secure
+# style 指定子によるXSS対策 (IE10以前で必須 / behavior:url(xss.htc) )
+_style_secure
 # 相対パスを絶対パスに書き換え
 _absolute_path
 
