@@ -12,7 +12,5 @@ link		rel, type, href, title
 style
 
 
-# style 指定子によるXSS対策
-#_style_secure
 # 相対パスを絶対パスに書き換え
 _absolute_path
