@@ -4,6 +4,9 @@
 _base		id, title, style, lang
 _protocol	http, https, ftp, mailto, mms
 
+# style 指定子によるXSS対策 (IE10以前で必須 / behavior:url(xss.htc) )
+_style_secure
+
 # 相対URIを絶対URI（ドメイン付き）に書き換え
 _absolute_uri
 
