@@ -119,7 +119,8 @@ bdo
 wbr
 time	datetime, pubdate
 
-# style 指定子によるXSS対策
-# _style_secure
+# style 指定子によるXSS対策 (IE10以前で必須 / behavior:url(xss.htc) )
+_style_secure
+
 # 相対パスを絶対パスに書き換え
 _absolute_path
