@@ -13,6 +13,8 @@
 -【fix】検索プラグインのradioボタンが文字で選べない。
 -【fix】DirectoryIndexに設定されたときの検出に失敗する。
 -【fix】サブドメインモードかつ https の時、Canonical URL等がおかしい。
+-【fix】【TagEscpae.pm】すべての属性で「xxx:」といった文字列が書けなくなっていた。((これによりstyle属性にCSSを書くことが困難になっていた。))
+-【Security】【TagEscpae.pm】style属性のエスケープを再度有効化。((Ver3.02-3.16間で「behavior: url(xss.js)」によるXSSが有効なため。))
 -他
 
 Markdown記法にてリストの入れ子処理を変更しました。この変更により本家の動作に近づいたと思いますが、もしかしたら不具合があるかも知れません。
